--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,9 +5,10 @@
     <title>Footer</title>
 </head>
 <body>
-<div th:fragment="footer">
+<div th:fragment="footer" id="footer">
     <hr/>
-    footer
+    <img src="/img/people.png" alt="" id="people"/>
+    <hr/>
 </div>
 </body>
 </html>
