--- a/src/main/resources/templates/myerror.html
+++ b/src/main/resources/templates/myerror.html
@@ -5,6 +5,8 @@
     <title>Error</title>
 </head>
 <body>
-Что-то пошло не так
+<div id="substrate">
+Что-то пошло не т ак
+</div>
 </body>
 </html>
