--- a/src/main/resources/templates/review/index.html
+++ b/src/main/resources/templates/review/index.html
@@ -5,6 +5,7 @@
     <title>Список отзывов</title>
 </head>
 <body>
+<div id="substrate">
 <div th:replace="fragments/header :: header"></div>
 <div th:replace="fragments/filter :: filter"></div>
 <table>
@@ -35,8 +36,12 @@
         </td>
         <td th:text="${review.getSmallComment()}"></td>
         <td th:text="${review.rating}"></td>
-        <td><a th:href="@{/reviews/{id}(id=${review.getId()})}">Подробнее</a></td>
-        <td><a th:if="${review.currentUserIsCallerOrAdmin()}" th:href="@{/reviews/{id}/edit(id=${review.getId()})}">Редактировать</a></td>
+        <td><a th:href="@{/reviews/{id}(id=${review.getId()})}"><button>Подробнее</button></a></td>
+        <td>
+            <a th:if="${review.currentUserIsCallerOrAdmin()}" th:href="@{/reviews/{id}/edit(id=${review.getId()})}">
+                <button>Изменить</button>
+            </a>
+        </td>
     </tr>
     <tr th:if="${reviews.isEmpty()}">
         <td colspan="10">Нет записей</td>
@@ -44,9 +49,10 @@
     </tbody>
 </table>
 <div th:replace="fragments/pagination :: pagination"></div>
-<div th:replace="fragments/footer :: footer"></div>
 <a th:href="@{/reviews/add}">
     <button>Добавить отзыв</button>
 </a>
+<div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
