--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -11,7 +11,7 @@
     <input type="text" th:value="${filter}" id="filterTextField"/>
     <button id="filterButton">Поиск</button>
     <button id="clearButton">Очистить фильтр</button>
-    <div th:if="${!filter.equals('')}" style="color:red">Активен фильтр</div>
+    <div th:if="${!filter.equals('')}" class="error_line">Активен фильтр</div>
 </div>
 </body>
 </html>
