--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -5,13 +5,14 @@
     <title>Редактировать пользователя</title>
 </head>
 <body>
+<div id="substrate">
 <div th:replace="fragments/header :: header"></div>
     <form th:method="PATCH" th:action="@{/persons/edit}" th:object="${person}">
         <table>
             <tbody>
             <tr>
                 <td class="right_align"><label for="username">Мои Ф.И.О.:</label></td>
-                <td><input type="text" th:field="*{username}" id="username" readonly/></td>
+                <td class="left_align"><input type="text" th:field="*{username}" id="username" readonly/></td>
             </tr>
             <tr th:if="${#fields.hasErrors('username')}">
                 <td colspan="2" class="error_line center_align" th:errors="*{username}"></td>
@@ -19,7 +20,7 @@
 
             <tr>
                 <td class="right_align"><label for="position">Моя дата рождения:</label></td>
-                <td><input type="date" th:field="*{birthday}" id="position"/></td>
+                <td class="left_align"><input type="date" th:field="*{birthday}" id="position"/></td>
             </tr>
             <tr th:if="${#fields.hasErrors('birthday')}">
                 <td colspan="2" class="error_line center_align"  th:errors="*{birthday}"></td>
@@ -27,7 +28,7 @@
 
             <tr>
                 <td class="right_align"><label for="phone">Мой телефон:</label></td>
-                <td><input type="text" th:field="*{phone}" id="phone"/></td>
+                <td class="left_align"><input type="text" th:field="*{phone}" id="phone"/></td>
             </tr>
             <tr th:if="${#fields.hasErrors('phone')}">
                 <td colspan="2" class="error_line center_align"  th:errors="*{phone}"></td>
@@ -35,12 +36,12 @@
 
             <tr>
                 <td class="right_align"><label for="iAmWorker">Я предоставляю услуги:</label></td>
-                <td><input type="checkbox" th:field="*{iamWorker}" id="iAmWorker"/></td>
+                <td class="left_align"><input class="checkbox" type="checkbox" th:field="*{iamWorker}" id="iAmWorker"/></td>
             </tr>
 
             <tr>
                 <td class="right_align"><label for="serviceDescription">Описание услуг:</label></td>
-                <td><textarea rows="3" cols="30" th:field="*{serviceDescription}" id="serviceDescription"></textarea></td>
+                <td class="left_align"><textarea rows="3" cols="30" th:field="*{serviceDescription}" id="serviceDescription"></textarea></td>
             </tr>
             <tr th:if="${#fields.hasErrors('serviceDescription')}">
                 <td colspan="2" class="error_line center_align" th:errors="*{serviceDescription}"></td>
@@ -48,19 +49,19 @@
 
             <tr>
                 <td class="right_align"><label for="experienceDate">Дата начала трудового стажа:</label></td>
-                <td><input type="date" th:field="*{experienceDate}" id="experienceDate"/></td>
+                <td class="left_align"><input type="date" th:field="*{experienceDate}" id="experienceDate"/></td>
             </tr>
 
             <tr>
                 <td class="right_align"><label for="price">Стоимость услуги:</label></td>
-                <td><input type="number" th:field="*{price}" id="price"/></td>
+                <td class="left_align"><input type="number" th:field="*{price}" id="price"/></td>
             </tr>
             <tr th:if="${#fields.hasErrors('price')}">
                 <td colspan="2" class="error_line center_align" th:errors="*{price}"></td>
             </tr>
 
             <tr>
-                <td class="center_align" colspan="2"><input type="submit" value="Сохранить"/></td>
+                <td class="center_align" colspan="2"><input class="submitButton" type="submit" value="Сохранить"/></td>
             </tr>
             </tbody>
         </table>
@@ -70,5 +71,6 @@
     </a>
 <div th:replace="fragments/back_button :: back_button"></div>
 <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
