--- a/src/main/resources/templates/person/index.html
+++ b/src/main/resources/templates/person/index.html
@@ -5,6 +5,7 @@
     <title>Список пользователей</title>
 </head>
 <body>
+<div id="substrate">
 <div th:replace="fragments/header :: header"></div>
 <div th:replace="fragments/filter :: filter"></div>
 <table>
@@ -30,9 +31,9 @@
         <td th:text="${person.getExperience()}"></td>
         <td th:text="${person.getPrice()}"></td>
         <td th:text="${person.getStringRating()}"></td>
-        <td><a th:href="@{/persons/{name}(name=${person.getUsername()})}">Подробнее</a></td>
+        <td><a th:href="@{/persons/{name}(name=${person.getUsername()})}"><button>Подробнее</button></a></td>
         <td><a th:if="${person.iamWorker && person.currentUserNotMe()}"
-               th:href="@{/reviews/add?workerName={name}(name=${person.getUsername()})}">Написать отзыв</a></td>
+               th:href="@{/reviews/add?workerName={name}(name=${person.getUsername()})}"><button>Написать отзыв</button></a></td>
     </tr>
     <tr th:if="${persons.isEmpty()}">
         <td colspan="9">Нет записей</td>
@@ -41,5 +42,6 @@
 </table>
 <div th:replace="fragments/pagination :: pagination"></div>
 <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
