--- a/src/main/resources/templates/person/info.html
+++ b/src/main/resources/templates/person/info.html
@@ -12,40 +12,41 @@
     <title>Информация о пользователе</title>
 </head>
 <body>
+<div id="substrate">
 <div th:replace="fragments/header :: header"></div>
 <table>
     <tbody>
     <tr>
-        <td>Имя:</td>
-        <td th:text="${person.getUsername()}"></td>
+        <td class="right_align">Имя:</td>
+        <td class="left_align" th:text="${person.getUsername()}"></td>
     </tr>
     <tr>
-        <td>Возраст:</td>
-        <td th:text="${person.getAge()}"></td>
+        <td class="right_align">Возраст:</td>
+        <td class="left_align" th:text="${person.getAge()}"></td>
     </tr>
     <tr>
-        <td>Описание услуги:</td>
-        <td th:text="${person.getServiceDescription()}"></td>
+        <td class="right_align">Описание услуги:</td>
+        <td class="left_align" th:text="${person.getServiceDescription()}"></td>
     </tr>
     <tr>
-        <td>Стаж:</td>
-        <td th:text="${person.getExperience()}"></td>
+        <td class="right_align">Стаж:</td>
+        <td class="left_align" th:text="${person.getExperience()}"></td>
     </tr>
     <tr>
-        <td>Телефон:</td>
-        <td th:text="${person.getPhone()}"></td>
+        <td class="right_align">Телефон:</td>
+        <td class="left_align" th:text="${person.getPhone()}"></td>
     </tr>
     <tr>
-        <td>Цена услуги:</td>
-        <td th:text="${person.getPrice()}"></td>
+        <td class="right_align">Цена услуги:</td>
+        <td class="left_align" th:text="${person.getPrice()}"></td>
     </tr>
     <tr>
-        <td>Рейтинг:</td>
-        <td th:text="${person.getStringRating()}"></td>
+        <td class="right_align">Рейтинг:</td>
+        <td class="left_align" th:text="${person.getStringRating()}"></td>
     </tr>
     <tr sec:authorize="isAuthenticated()">
-        <td>Разрешен:</td>
-        <td th:text="${person.isEnabled()}"></td>
+        <td class="right_align">Разрешен:</td>
+        <td class="left_align" th:text="${person.isEnabled()}"></td>
     </tr>
     </tbody>
 </table>
@@ -53,13 +54,14 @@
     <button>Написать отзыв</button>
 </a>
 <form sec:authorize="hasRole('ADMIN')" th:method="DELETE" th:action="@{/persons/{name}(name=${person.username})}">
-    <input type="submit" value="Удалить"/>
+    <input class="submitButton" type="submit" value="Удалить"/>
 </form>
 <form sec:authorize="hasRole('ADMIN')" th:method="PATCH" th:action="@{/persons/{name}/block(name=${person.username})}">
-    <input type="submit" value="Запретить/разрешить"/>
+    <input class="submitButton" type="submit" value="Запретить/разрешить"/>
 </form>
 <div th:replace="fragments/back_button :: back_button"></div>
 <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
 </body>
