--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div th:fragment="header" id="header">
+    <script type="text/javascript" th:src="@{/js/scroll_magic.js}"></script>
     <hr/>
     <link th:href="@{/css/main.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/header_text.js}"></script>
