--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -61,7 +61,9 @@
             </tr>
 
             <tr>
-                <td class="center_align" colspan="2"><input class="submitButton" type="submit" value="Сохранить"/></td>
+                <td class="center_align" colspan="2">
+                    <input class="submitButton" type="submit" value="Сохранить" onclick="return confirm('Сохранить изменения?')"/>
+                </td>
             </tr>
             </tbody>
         </table>
