--- a/src/main/resources/templates/person/edit_pass.html
+++ b/src/main/resources/templates/person/edit_pass.html
@@ -40,7 +40,9 @@
             </tr>
 
             <tr>
-                <td colspan="2" class="center_align"><input class="submitButton" type="submit" value="Изменить"/></td>
+                <td colspan="2" class="center_align">
+                    <input class="submitButton" type="submit" value="Изменить" onclick="return confirm('Сохранить изменения?')"/>
+                </td>
             </tr>
             </tbody>
         </table>
