--- a/src/main/resources/templates/person/info.html
+++ b/src/main/resources/templates/person/info.html
@@ -54,10 +54,10 @@
     <button>Написать отзыв</button>
 </a>
 <form sec:authorize="hasRole('ADMIN')" th:method="DELETE" th:action="@{/persons/{name}(name=${person.username})}">
-    <input class="submitButton" type="submit" value="Удалить"/>
+    <input class="submitButton" type="submit" value="Удалить" onclick="return confirm('Удалить пользователя?')"/>
 </form>
 <form sec:authorize="hasRole('ADMIN')" th:method="PATCH" th:action="@{/persons/{name}/block(name=${person.username})}">
-    <input class="submitButton" type="submit" value="Запретить/разрешить"/>
+    <input class="submitButton" type="submit" value="Запретить/разрешить" onclick="return confirm('Вы уверены?')"/>
 </form>
 <div th:replace="fragments/back_button :: back_button"></div>
 <div th:replace="fragments/footer :: footer"></div>
