--- a/src/main/resources/templates/review/add.html
+++ b/src/main/resources/templates/review/add.html
@@ -71,7 +71,9 @@
         </tr>
 
         <tr>
-            <td colspan="2"><input class="submitButton center_align" type="submit" value="Добавить отзыв"/></td>
+            <td colspan="2">
+                <input class="submitButton center_align" type="submit" value="Добавить отзыв" onclick="return confirm('Добавить отзыв?')"/>
+            </td>
         </tr>
         </tbody>
     </table>
