--- a/src/main/resources/templates/review/index.html
+++ b/src/main/resources/templates/review/index.html
@@ -27,14 +27,14 @@
     <tr th:each="review: ${reviews}">
         <td th:text="${review.getBeautyTimestamp()}"></td>
         <td th:text="${review.caller.username}"></td>
-        <td th:text="${review.equipment}"></td>
-        <td th:text="${review.reason}"></td>
+        <td th:text="${review.getShortEquipment}"></td>
+        <td th:text="${review.getShortReason()}"></td>
         <td th:text="${review.worker.username}"></td>
         <td>
             <span th:if="${review.workDone}">Да</span>
             <span th:unless="${review.workDone}">Нет</span>
         </td>
-        <td th:text="${review.getSmallComment()}"></td>
+        <td th:text="${review.getShortComment()}"></td>
         <td th:text="${review.rating}"></td>
         <td><a th:href="@{/reviews/{id}(id=${review.getId()})}"><button>Подробнее</button></a></td>
         <td>
