--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -6,6 +6,9 @@ textarea {
     resize: none;
     font-size: 14px;
     font-family: "Comic Sans MS", serif;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 input {
     font-size: 14px;
